crates/opentalk-types-common/tests/module_id/parse_invalid_characters_str.stderr
error: Module id may only contain lowercase letters, digits or "_"
 --> tests/module_id/parse_invalid_characters_str.rs:8:22
  |
8 |     let _module_id = module_id!("hello+world$123");
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `module_id` (in Nightly builds, run with -Z macro-backtrace for more info)
